syntax = "proto3";

option csharp_namespace = "beholder_stalk_v2.Protos";

package stalk.keyboard;

// The stalk keyboard service definition.
service Keyboard {
  // Sends a greeting
  rpc SendKey (SendKeyRequest) returns (SendKeyReply);
}

message Keypress {
    string key = 1; // Indicates the key name
    // Indicates a key press direction
    enum KeyDirection {
        PRESS_AND_RELEASE = 0;
        PRESS = 1;
        RELEASE = 2;
    };
    optional KeyDirection key_direction = 2;
    repeated string modifiers = 3;
    message KeypressDuration {
        optional uint32 delay = 1;
        optional uint32 min = 2;
        optional uint32 max = 3;
    }
    optional KeypressDuration duration = 4;
}


// The request message containing the user's name.
message SendKeyRequest {
  Keypress keypress = 1;
}

// The response message containing the greetings.
message SendKeyReply {
  string message = 1;
}
